# bayesmix

./: .clang-format  .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  FindProtobuf.cmake  INSTALL.md  LICENSE  README.md  TODOS.txt  algo_marg_settings.asciipb  algo_settings.asciipb  build_tbb.py  chain_state.proto  compile_protos.sh  dependent_run.cc  example_proto.txt  install-tbb.bat  maintest_multi.cpp  maintest_uni.cpp  mh_main.cc  pre-commit-config.yaml  run.cc  run.cpp  run_cb.cpp  run_mcmc.cc  run_mcmc_mfa.cc  run_pe.cpp  stan.R  stan.cc  test_mh_updater.cpp
benchmarks/: CMakeLists.txt  eval_lpdf.cc  lpd_grid.cc  mcmc_runs.cc  nnw_marg_lpdf.cc  utils.cc  utils.h
docs/: .gitignore  CMakeLists.txt  Doxyfile.in  README.md  README.rst  algorithms.rst  collectors.rst  conf.py  hierarchies.rst  index.rst  likelihoods.rst  mixings.rst  prior_models.rst  protos.html  protos.rst  python_interface.rst  states.rst  tutorial.rst  updaters.rst  utils.rst
examples/: CMakeLists.txt  gamma_gamma_hier.h  gamma_gamma_hier.hpp  run_gamma_gamma.cc  run_gamma_gamma.cpp
examples/examples_mfa_hierarchy/: run.sh
examples/examples_mfa_hierarchy/in/: algo.asciipb
examples/fa_hierarchy/: run.sh  run_auto.sh
examples/fa_hierarchy/in/: algo.asciipb  data.csv  fa.asciipb  fa_auto.asciipb
examples/gamma_hierarchy/: gamma_gamma_hier.h  gamma_likelihood.h  gamma_prior_model.h  gammagamma_hierarchy.h  gammagamma_updater.h  run_gamma_gamma.cc
examples/mfa_hierarchy/: config.txt  run.sh  run_auto.sh
examples/mfa_hierarchy/in/: algo.asciipb  data.csv  dp_gamma.asciipb  grid.csv  mfa.asciipb  mfa_auto.asciipb  nnig_ngg.asciipb
examples/tutorial/: 2dplot.sh  2drun.sh  plot.sh  run.sh
plots/: CMakeLists.txt  plot_mcmc.cc  plot_utils.cc  plot_utils.h
privacy_experiments/: CMakeLists.txt  utils.cc  utils.h
privacy_experiments/compare/: main.cc
privacy_experiments/compare/params/: algo.asciipb  bgg_params.asciipb
privacy_experiments/gaussian/: main.cc
privacy_experiments/gaussian/params/: dp_gamma.asciipb  nnig_ngg.asciipb
privacy_experiments/unidimensional_laplace/: main.cc
privacy_experiments/unidimensional_laplace/params/: algo.asciipb  nnig_ngg.asciipb  truncsb.asciipb
privacy_experiments/wavelets/: main.cc
privacy_experiments/wavelets/params/: nnig_ngg.asciipb
python/: .gitignore  README.md  comparison.ipynb  dens_multi.csv  dens_multi_ngiw.csv  dens_uni_ngg.csv  generate_asciipb.py  mass_uni.csv  mass_uni_ngg.csv  measure_time.py  metropolis.ipynb  nclu_multi_ngiw.csv  nclu_uni_ngg.csv  plot.ipynb  plot_2d_clusters.py  plot_epl.py  plot_pe.py  populate_benchmark_datasets.py  regression.ipynb  requirements.txt  setup.cfg  setup.py  stickbreak.ipynb  thesis_1_data.ipynb  thesis_2_tests.ipynb  thesis_3_bnpmix.ipynb  thesis_4_vs_bnpmix.ipynb  thesis_asciipb.py
python/bayesmix/: build_bayesmix.py
python/bayesmixpy/: __init__.py  build_bayesmix.py  io_utils.py  run.py  shell_utils.py
python/notebooks/: comparison.ipynb  gaussian_mix_NNxIG.ipynb  gaussian_mix_multi.ipynb  gaussian_mix_uni.ipynb  plot.ipynb  regression.ipynb  split_merge_benchmarking.ipynb
python/reproducibility/: .gitignore  README.md  compare.ipynb  generate_high_dim_data.py  python_example.ipynb  replicate_jss_paper.py  run_bnpmix.R
python/scripts/: populate_benchmark_datasets.py  replicate_jss_paper.py
python/tests/: test_build.py  test_run.py
scripts/semihdp/: CMakeLists.txt  run_chile.cpp  run_simulation1.cpp  run_simulation2.cpp  run_simulation_many.cpp
src/clustering/: CMakeLists.txt  ClusterEstimator.cpp  ClusterEstimator.hpp
src/clustering/R scripts/: MCMC_clusters_simulated.R  galaxies_dataset.R  multivariate_dataset.R
src/clustering/lossfunction/: BinderLoss.cpp  BinderLoss.hpp  CMakeLists.txt  LossFunction.cpp  LossFunction.hpp  VariationInformation.cpp  VariationInformation.hpp  test_loss.cpp
src/clustering/uncertainty/: CMakeLists.txt  CredibleBall.cpp  CredibleBall.hpp  run_cb.cpp
src/hierarchies/: CMakeLists.txt  HierarchyBase.hpp  HierarchyNNIG.cpp  HierarchyNNIG.hpp  HierarchyNNIG.imp.hpp  HierarchyNNW.cpp  HierarchyNNW.hpp  HierarchyNNW.imp.hpp  OLD_fa_hierarchy.cc  OLD_fa_hierarchy.h  OLD_lapnig_hierarchy.cc  README.md  Readme.md  abstract_hierarchy.h  base_hierarchy.cc  base_hierarchy.cpp  base_hierarchy.h  base_hierarchy.hpp  betagg_hierarchy.h  conjugate_hierarchy.h  dependent_hierarchy.cc  dependent_hierarchy.cpp  dependent_hierarchy.h  dependent_hierarchy.hpp  fa_hierarchy.cc  fa_hierarchy.h  hierarchy_base.hpp  hierarchy_nnig.cpp  hierarchy_nnig.hpp  hierarchy_nnw.cpp  hierarchy_nnw.hpp  lapnig_hierarchy.cc  lapnig_hierarchy.h  lddp_uni_hierarchy.cpp  lddp_uni_hierarchy.hpp  lin_dep_normal_hierarchy.cpp  lin_dep_normal_hierarchy.hpp  lin_reg_uni_hierarchy.cc  lin_reg_uni_hierarchy.cpp  lin_reg_uni_hierarchy.h  (+16 more)
src/hierarchies/.old/: conjugate_hierarchy.h  lin_reg_uni_hierarchy.h  nnw_hierarchy.h  nnxig_hierarchy.cc
src/hierarchies/likelihoods/: CMakeLists.txt  abstract_likelihood.h  base_likelihood.h  beta_likelihood.cc  beta_likelihood.h  fa_likelihood.cc  fa_likelihood.h  laplace_likelihood.cc  laplace_likelihood.h  likelihood_internal.h  multi_norm_likelihood.cc  multi_norm_likelihood.h  states.h  uni_lin_reg_likelihood.cc  uni_lin_reg_likelihood.h  uni_norm_likelihood.cc  uni_norm_likelihood.h
src/hierarchies/priors/: CMakeLists.txt  abstract_prior_model.h  base_prior_model.h  fa_prior_model.cc  fa_prior_model.h  hyperparams.h  (+11 more)
src/pointestimates/: CMakeLists.txt  Makefile  point_estimate_test.cpp
test/: CMakeLists.txt  Factory.hpp  cluster.cc  collectors.cc  collectors.cpp  distributions.cc  distributions.cpp  eigen_utils.cc  eigen_utils.cpp  eigenproto.cc  get_state_as_proto_test.cpp  gradient.cc  hierarchies.cc  hierarchies.cpp  likelihoods.cc  logit_sb.cc  lpdf.cc  lpdf.cpp  mfm_mixing.cc  prior_models.cc  priors.cc  priors.cpp  privacy.cc  proto_utils.cc  proto_utils.cpp  rng.cc  rng.cpp  rng_test.cpp  runtime.cc  semi_hdp.cc  semi_hdp.cpp  slice_sampler.cc  test.cpp  write_proto.cc  write_proto.cpp
(+427 files in other folders)
