[metadata]
name                          = bayesmixpy
version                       = 0.0.1
licens                        = Apache 2.0
license_files                 = LICENSE
author                        = Mario Beraha
author_email                  = berahamario@gmail.com
description                   = BAYESMIXPY: A Python interface to BayesMix.
long_description              = file: README.md
long_description_content_type = text/markdown
url                           = https://github.com/bayesmix-dev/bayesmix/tree/master/python
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.6
